--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap');
+.css-qfxt4h-MuiFormLabel-root-MuiInputLabel-root {
+    color: #808080 !important;
+}
+
